force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <description>Objeto de livros</description>
    <label>Livro</label>
    <nameField>
        <label>Titulo do Livro</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Livros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>