force-app/main/default/objects/Book__c/fields/CompleteTitle__c.field-meta.xml
<CustomField>
    <fullName>CompleteTitle__c</fullName>
    <label>Titulo Completo</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>