force-app/main/default/objects/Book__c/fields/ISBN10__c.field-meta.xml
<CustomField>
    <fullName>ISBN10__c</fullName>
    <externalId>true</externalId>
    <label>ISBN10</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>