force-app/main/default/objects/Book__c/fields/QuizEnable__c.field-meta.xml
<CustomField>
    <fullName>QuizEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quiz está habilitado?</label>
    <type>Checkbox</type>
</CustomField>