force-app/main/default/objects/Book__c/fields/XP__c.field-meta.xml
<CustomField>
    <fullName>XP__c</fullName>
    <label>XP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>